2021-06-16  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Fix intermittent groom/stale failure,
	due to SIGUSR1/SIGUSR2 races.  Trace more.

2021-06-15  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh (err): Elaborate.  Use as the reliable
	error-report triggering function, rather than "exit 1".

2021-06-03  Frank Ch. Eigler <fche@redhat.com>

	PR27863
	* run-debuginfod-find.sh: Test "after-you" queueing via flooding
	with concurent curls.

2021-05-14  Frank Ch. Eigler <fche@redhat.com>

	PR27859
	* run-debuginfod-find.sh: Test absence of 404-latch bug in client
	curl handle reuse.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* dwelf_elf_e_machine_string.c (main): Use startswith.
	* dwelfgnucompressed.c (main): Likewise.
	* elfgetchdr.c (main): Likewise.
	* elfputzdata.c (main): Likewise.
	* vdsosyms.c (module_callback): Likewise.

2021-05-04  Alice Zhang  <alizhang@redhat.com>

	* run-debuginfod-find.sh: Added tests for negative cache files.

2021-04-26  Frank Ch. Eigler <fche@redhat.com>

	PR27571
	* run-debuginfod-find.sh: Add test case for unwriteable cache files.

2021-04-23  Omar Sandoval  <osandov@fb.com>

	* run-low_high_pc-dw-form-indirect.sh: New file.
	* run-readelf-dw-form-indirect.sh: New file.
	* testfile-dw-form-indirect.bz2: New file.
	* Makefile.am (TESTS): Add run-low_high_pc-dw-form-indirect.sh and
	run-readelf-dw-form-indirect.sh.
	(EXTRA_DIST): Add run-low_high_pc-dw-form-indirect.sh,
	run-readelf-dw-form-indirect.sh, and testfile-dw-form-indirect.bz2.

2021-04-26  Frank Ch. Eigler <fche@redhat.com>

	PR26125
	* run-debuginfod-find.sh: Add test case for cache cleanup rmdir.

2021-04-23  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Add a tiny test for client object reuse.
	Add an "errfiles" test construct to ask the framework to print
	various files in the case of an error.

2021-03-30  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Add thread comm checks.
