@@ -1,3 +1,8 @@
+2021-07-02  Mark Wielaard  <mark@klomp.org>
+
+       * run-debuginfo-find.sh: unset VALGRIND_CMD before testing debuginfod
+       client cache.
+
 2021-06-16  Frank Ch. Eigler <fche@redhat.com>
 
 	* run-debuginfod-find.sh: Fix intermittent groom/stale failure,
